--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -92,7 +92,8 @@ jobs:
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "start=$(date "%H:%M:%S")" >> $GITHUB_ENV
+        echo "start=$(date "+%H")" >> $GITHUB_ENV
+        echo "start1=$(date "+%M")" >> $GITHUB_ENV
          
     - name: Load custom feeds
       run: |
@@ -242,9 +243,11 @@ jobs:
     - name: Total time
       run: |
         echo "DATE1=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "end=$(date "%H:%M:%S")" >> $GITHUB_ENV  
+        echo "end=$(date "+%H")" >> $GITHUB_ENV
+        echo "end1=$(date "+%M")" >> $GITHUB_ENV
         echo "time=$((end - start))" >> $GITHUB_ENV
-
+        echo "time1=$((end1 - start1))" >> $GITHUB_ENV
+        
     - name: Telegram notification
       uses: appleboy/telegram-action@master
       with:
@@ -254,7 +257,7 @@ jobs:
           ♨️${{ env.PRODUCT_NAME }}编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.DATE1 }}
-          编译耗时：${{ env.time }}
+          编译耗时：${{ env.time }}时${{ env.time1 }}分
           更新信息：
           作者: ${{ env.author }}
           时间: ${{ env.date }}
