--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -29,7 +29,8 @@ jobs:
         svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
-        
+        echo "start=$(date "+%H")" >> $GITHUB_ENV
+        echo "start1=$(date "+%M")" >> $GITHUB_ENV
     - name: Download kernel
       uses: robinraju/release-downloader@v1.3
       with:
@@ -59,6 +60,14 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GH_TOKEN }}                        
+    
+    - name: Total time
+      run: |
+        
+        echo "end=$(date "+%H")" >> $GITHUB_ENV
+        echo "end1=$(date "+%M")" >> $GITHUB_ENV
+        echo "time=$(( end - start ))" >> $GITHUB_ENV
+        echo "time1=$(( end1 - start1 ))" >> $GITHUB_ENV
         
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
@@ -67,3 +76,4 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
            ҉ 🎡同步成功 ҉
+           编译耗时：${{ env.time }}时${{ env.time1 }}分
