Update Delete Artifacts Update Checker.yml

--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -65,7 +65,7 @@ jobs:
       run: |
         
         echo "end=$(date +%s)" >> $GITHUB_ENV
-        echo "time=$(( end - start ))" >> $GITHUB_ENV
+        echo "time=$[ end - start ]" >> $GITHUB_ENV
         
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
