--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -29,7 +29,7 @@ jobs:
         svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
-
+        echo "start=$(date "+%H")" >> $GITHUB_ENV
     - name: Download kernel
       uses: robinraju/release-downloader@v1.3
       with:
@@ -58,8 +58,16 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GH_TOKEN }}                        
-         
+        github_token: ${{ secrets.GH_TOKEN }}
+        
+    - name: Total time
+      run: |
+       
+        echo "end=$(date "+%H")" >> $GITHUB_ENV
+        echo "end1=$(date "+%M")" >> $GITHUB_ENV
+        echo "time=$(( date +%H - start ))" >> $GITHUB_ENV
+
+             
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
       with:
@@ -67,3 +75,4 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
            ҉ 🎡同步成功 ҉
+           编译耗时：${{ env.time }}时${{ env.time1 }}分
