--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -62,11 +62,13 @@ jobs:
         
     - name: Total time
       run: |
-       
+        End=$(date "+%H")
+        echo "end=$End" >> $GITHUB_ENV
         echo "end=$(date "+%H")" >> $GITHUB_ENV
         echo "end1=$(date "+%M")" >> $GITHUB_ENV
-        echo "time=$(( date +%H - start ))" >> $GITHUB_ENV
-
+        Time=$((end-start))
+        echo "time=$((end-start))" >> $GITHUB_ENV
+        echo "time=$Time" >> $GITHUB_ENV
              
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
