--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -62,13 +62,9 @@ jobs:
         
     - name: Total time
       run: |
-        End=$(date "+%H")
-        echo "end=$End" >> $GITHUB_ENV
-        echo "end=$(date "+%H")" >> $GITHUB_ENV
+        echo "start1=$(date "+%H")" >> $GITHUB_ENV
         echo "end1=$(date "+%M")" >> $GITHUB_ENV
-        Time=$((end-start))
-        echo "time=$((end-start))" >> $GITHUB_ENV
-        echo "time=$Time" >> $GITHUB_ENV
+        echo "time=$((start1-start))" >> $GITHUB_ENV
              
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
