Update Delete Artifacts Update Checker.yml

--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -65,7 +65,11 @@ jobs:
          endtime=`date +'%Y-%m-%d %H:%M:%S'`
          start_seconds=$(date --date="$starttime" +%s);
          end_seconds=$(date --date="$endtime" +%s);
-         echo "本次运行时间： "$((end_seconds-start_seconds))"s"
+         time=$(( end_seconds-start_seconds ))
+         echo "$time"
+         time1=$time/60
+         echo "$time1"
+         echo "time2=$time1" >> $GITHUB_ENV
              
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
@@ -74,4 +78,4 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
            ҉ 🎡同步成功 ҉
-           编译耗时：${{ env.time }}时${{ env.time1 }}分
+           编译耗时：${{ env.time2 }}时${{ env.time1 }}分
