--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -29,7 +29,7 @@ jobs:
         svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
-        starttime=`date +'%Y-%m-%d %H:%M:%S'`
+        echo "starttime=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
 
     - name: Download kernel
       uses: robinraju/release-downloader@v1.3
