--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -29,7 +29,7 @@ jobs:
         svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
-        echo "starttime=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        echo "starttime=$(date +%s)" >> $GITHUB_ENV
 
     - name: Download kernel
       uses: robinraju/release-downloader@v1.3
@@ -63,17 +63,13 @@ jobs:
         
     - name: Total time
       run: |
-         endtime=$(date "+%Y-%m-%d %H:%M:%S")
-         start_seconds=$(date --date="$starttime" +%s)
-         end_seconds=$(date --date="$endtime" +%s)
+         endtime=$(date +%s)
          seconds=$(( end_seconds-start_seconds )
          hour=$(( $seconds/3600 ))
          min=$(( ($seconds-${hour}*3600)/60 ))
          sec=$(( $seconds-${hour}*3600-${min}*60 ))
-         echo $seconds
-         echo $starttime
-         echo $endtime
-         echo "time1=${hour}:${min}:${sec}" >> $GITHUB_ENV
+         HMS=`echo ${hour}:${min}:${sec}`
+         echo "time=$HMS" >> $GITHUB_ENV
              
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
@@ -82,4 +78,4 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
            ҉ 🎡同步成功 ҉
-           编译耗时：${{ env.time }}时${{ env.time1 }}分
+           编译耗时：${{ env.time }}
