--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -29,7 +29,7 @@ jobs:
         svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
-        echo "starttime=$(date +%s)" >> $GITHUB_ENV
+        echo "start=$(date +%s)" >> $GITHUB_ENV
 
     - name: Download kernel
       uses: robinraju/release-downloader@v1.3
@@ -63,8 +63,8 @@ jobs:
         
     - name: Total time
       run: |
-         endtime=$(date +%s)
-         seconds=$(( end_seconds-start_seconds )
+         end=$(date +%s)
+         seconds=$(( end - start ))
          hour=$(( $seconds/3600 ))
          min=$(( ($seconds-${hour}*3600)/60 ))
          sec=$(( $seconds-${hour}*3600-${min}*60 ))
